encapsulating URL, using AUTH not -a, adding PREFIX

--- a/docs/howtos/quick-start/cli/_cli-basic-querying.mdx
+++ b/docs/howtos/quick-start/cli/_cli-basic-querying.mdx
@@ -5,11 +5,15 @@
 ![RedisInsight](../images/redis-insight.svg)
 
 ```shell
-# syntax 1 : connect using host & port
-$ redis-cli -h host -p port -a password
+# syntax 1 : connect using host & port, followed by password
+$ redis-cli -h host -p port
+> AUTH password
+OK
 
 # example 1
-$ redis-cli -h redis15.localnet.org -p 6390 -a myUnguessablePassword
+$ redis-cli -h redis15.localnet.org -p 6390
+> AUTH myUnguessablePassword
+OK
 
 # syntax 2 : connect using uri
 $ redis-cli -u redis://user:password@host:port/dbnum
@@ -23,77 +27,77 @@ $ redis-cli -u redis://LJenkins:p%40ssw0rd@redis-16379.hosted.com:16379/0
 
 ```shell
 # syntax : Check specific keys
-> keys pattern
+> KEYS pattern
 
 # example
-> keys *
+> KEYS *
 
 #------------
 # syntax : Check number of keys in database
-> dbsize
+> DBSIZE
 
 #------------
 # syntax : set a key value
-> set key value EX expirySeconds
+> SET key value EX expirySeconds
 
 # example
-> set company redis EX 60
+> SET company redis EX 60
 
 #------------
 # syntax : get value by key
-> get key
+> GET key
 
 # example
-> get company
+> GET company
 
 #------------
 # syntax : delete keys
-> del key1 key2 key3 ... keyN
+> DEL key1 key2 key3 ... keyN
 
 # example
-> del company
+> DEL company
 
 #------------
 # syntax : Check if key exists
-> exists key1
+> EXISTS key1
 
 # example
-> exists company
+> EXISTS company
 
 #------------
 # syntax : set expiry to key
-> expire key seconds
+> EXPIRE key seconds
 
 # example
-> expire lastname 60
+> EXPIRE lastname 60
 
 #------------
 # syntax : remove expiry from key
-> persist key
+> PERSIST key
 
 # example
-> persist lastname
+> PERSIST lastname
 
 #------------
 # syntax : find (remaining) time to live of a key
-> ttl key
+> TTL key
 
 # example
-> ttl lastname
+> TTL lastname
 
 #------------
 # syntax : increment a number
-> incr key
+> INCR key
 
 # example
-> incr counter
+> INCR counter
 
 #------------
 # syntax : decrement a number
-> decr key
+> DECR key
 
 # example
-> decr counter
+> DECR counter
 ```
 
 Detailed CLI instructions can be viewed [here](https://redis.io/docs/manual/cli/) and
