--- a/docs/howtos/quick-start/index-quick-start.mdx
+++ b/docs/howtos/quick-start/index-quick-start.mdx
@@ -47,7 +47,7 @@ There are essentially two ways you can use Redis:
 
 - **Cloud Redis**: A hosted and serverless Redis database-as-a-service (DBaaS). The fastest way to deploy Redis Enterprise via Amazon AWS, Google Cloud Platform, or Microsoft Azure.
   - [Getting Started](/create/rediscloud)
-  - [Videos](https://www.youtube.com/playlist?list=PL83Wfqi-zYZG6uGxBagsbqjpsi2XBEj1K),
+  - [Videos](https://www.youtube.com/playlist?list=PL83Wfqi-zYZG6uGxBagsbqjpsi2XBEj1K)
   - [Free Sign-up](https://redis.com/try-free)
 - **On-prem/local Redis**: Self-managed Redis using your own server and any operating system (Mac OS, Windows, or Linux).
 
