adding up-to-date useful resources for secondary indexing

--- a/docs/howtos/quick-start/cli/_cli-secondary-indexing.mdx
+++ b/docs/howtos/quick-start/cli/_cli-secondary-indexing.mdx
@@ -149,4 +149,8 @@ More details on [query syntax](https://redis.io/docs/stack/search/reference/quer
 > FT.DROPINDEX userIdx
 ```
 
-Watch video [RediSearch (RedisConf 2020)](https://www.youtube.com/watch?v=9R29LLWquME), also more details can be found in [docs](https://redis.io/docs/stack/search/)
+### Useful Resources
+
+1. [Redis and JSON explained (Revisited in 2022)](https://www.youtube.com/watch?v=I-ohlZXXaxs) video
+1. [Searching with Redis Stack](https://redis.io/docs/stack/search/)
+1. [Redis University 204, Storing, Querying, and Indexing JSON at Speed](https://university.redis.com/courses/ru204/)
