Reflect changes in staff for upcoming streams.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,23 +24,20 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Tuesday, January 17     | 2:00 PM ET | [Savannah Norem][norem]                                                                            | [savannah_streams_in_snake_case][twitch]                                                             |
 | Wednesday, January 18   | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do Birds dream in JSON? (Integrating Fast API)][twitch]                                             |
-| Thursday, January 19    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
-| Friday, January 20      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][twitch]                                                                       |
+| Friday, January 20      | 6:00 PM UTC  | [Savannnah Norem][norem], [Justin Castilla][justin]                                                   | [This Week On Discord][twitch]                                                                       |
 
   </TabItem>
   <TabItem value="recurring">
 
 Sometimes we're on the road speaking at in-person events or enjoying a well-deserved vacation. But when we're not, here's our weekly streaming schedule:
 
-|    Day    |    Time      | Streamers                                                                                             | Show                                                             |
+|    Day    |    Time      | Streamers                                                                                            | Show                                                             |
 | :-------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
-| Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
-| Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
-| Thursday  | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [Weekly Redis University Office Hours][officehrs]                |
-| Friday    | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][twitch]                                   |
+| Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                            | [Do birds dream in JSON?][twitch]                                |
+| Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                              | [savannah_streams_in_snake_case][twitch]                         |
+| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                              | [Simon's Things on Thursdays][twitch]                            |
+| Friday    | 6:00 PM UTC  | [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                      | [This Week On Discord][twitch]                                   |
 
   </TabItem>
   <TabItem value="past">
@@ -49,6 +46,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Tuesday, January 17    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][76]                                                             |
 | Friday, January 13     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][75]                                                                       |
 | Thursday, January 12   | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                                                |
 | Thursday, January 12   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Introduction to Redis Stack for IoT Projects][74]                  |
@@ -175,6 +173,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[76]: https://www.youtube.com/watch?v=0pxI00YpusU
 [75]: https://www.youtube.com/watch?v=Vn9LDdyjMsQ
 [74]: https://www.youtube.com/watch?v=hdN80_g5doY
 [73]: https://www.youtube.com/watch?v=r7TXC7_Qn6M
