Updated for week of Jan 23.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,20 +24,19 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Wednesday, January 18   | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do Birds dream in JSON? (Integrating Fast API)][twitch]                                             |
-| Friday, January 20      | 6:00 PM UTC  | [Savannnah Norem][norem], [Justin Castilla][justin]                                                   | [This Week On Discord][twitch]                                                                       |
+| Thursday, January 26    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams!][twitch]                                           |
 
   </TabItem>
   <TabItem value="recurring">
 
 Sometimes we're on the road speaking at in-person events or enjoying a well-deserved vacation. But when we're not, here's our weekly streaming schedule:
 
-|    Day    |    Time      | Streamers                                                                                            | Show                                                             |
-| :-------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
-| Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                            | [Do birds dream in JSON?][twitch]                                |
-| Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                              | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                              | [Simon's Things on Thursdays][twitch]                            |
-| Friday    | 6:00 PM UTC  | [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                      | [This Week On Discord][twitch]                                   |
+|    Day    |    Time      | Streamers                                                                                             | Show                                                             |
+| :-------: | :---------:  | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
+| Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
+| Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
+| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
+| Friday    | 6:00 PM UTC  | [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                       | [This Week On Discord][twitch]                                   |
 
   </TabItem>
   <TabItem value="past">
@@ -46,6 +45,8 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, January 20      | 6:00 PM UTC  | [Savannnah Norem][norem], [Justin Castilla][justin]                                                  | [This Week On Discord][78]                                                                       |
+| Wednesday, January 18   | 3:00 PM PST  | [Justin Castilla][justin]                                                                            | [Do Birds dream in JSON? (Integrating Fast API)][77]                                             |
 | Tuesday, January 17    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][76]                                                             |
 | Friday, January 13     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][75]                                                                       |
 | Thursday, January 12   | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                                                |
@@ -173,6 +174,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[78]: https://www.youtube.com/watch?v=EyVe5OmoyI4
+[77]: https://www.youtube.com/watch?v=LpdShJOZuwA
 [76]: https://www.youtube.com/watch?v=0pxI00YpusU
 [75]: https://www.youtube.com/watch?v=Vn9LDdyjMsQ
 [74]: https://www.youtube.com/watch?v=hdN80_g5doY
