adds this weeks schedule

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,10 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, February 2    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 2)][twitch]                               |
+| Monday, February 6      | 3:00 AM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
+| Tuesday, February 7     | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
+| Thursday, February 9     | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
+
 
   </TabItem>
   <TabItem value="recurring">
@@ -35,7 +38,7 @@ Sometimes we're on the road speaking at in-person events or enjoying a well-dese
 | :-------: | :---------:  | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
 | Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
+| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]               |
 
   </TabItem>
   <TabItem value="past">
@@ -44,6 +47,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, February 2   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 2)][82]                               |
 | Thursday, January 26   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 1)][81]                               |
 | Tuesday, January 24    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][80]                                                             |
 | Monday, January 23     | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do Birds Dream in JSON? - Episode 7][79]                                                        |
@@ -176,6 +180,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[82]: https://www.youtube.com/watch?v=qzFUZ7aBCEo
 [81]: https://www.youtube.com/watch?v=NCvHfB7BhfQ
 [80]: https://www.youtube.com/watch?v=T0UEY97ZhZY
 [79]: https://www.youtube.com/watch?v=TpMNJNEI7co
