updates simon title

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,7 +26,7 @@ Check out our upcoming events:
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Monday, February 6      | 3:00 AM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
 | Tuesday, February 7     | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday, February 9     | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
+| Thursday, February 9     | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                            |
 
 
   </TabItem>
@@ -38,7 +38,7 @@ Sometimes we're on the road speaking at in-person events or enjoying a well-dese
 | :-------: | :---------:  | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
 | Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]               |
+| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]               |
 
   </TabItem>
   <TabItem value="past">
