Adds Feb 16 show removes recurring Thu show.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-
+| Thursday, February 16   | 10:30am UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 1][twitch]               |
 
   </TabItem>
   <TabItem value="recurring">
@@ -35,7 +35,6 @@ Sometimes we're on the road speaking at in-person events or enjoying a well-dese
 | :-------: | :---------:  | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
 | Monday    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Tuesday   | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
-| Thursday  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]               |
 
   </TabItem>
   <TabItem value="past">
