--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, February 16   | 10:30am UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 1][twitch]               |
 
   </TabItem>
   <TabItem value="recurring">
@@ -43,6 +42,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, February 16  | 10:30am UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 1][84]               |
 | Tuesday, February 7    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][83]                                                             |
 | Thursday, February 2   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 2)][82]                               |
 | Thursday, January 26   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 1)][81]                               |
@@ -177,6 +177,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[84]: https://www.youtube.com/watch?v=TCTej1uihG4
 [83]: https://www.youtube.com/watch?v=8YwgWZuC5kc
 [82]: https://www.youtube.com/watch?v=qzFUZ7aBCEo
 [81]: https://www.youtube.com/watch?v=NCvHfB7BhfQ
