--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,6 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Friday, February 17     | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 2][twitch]               |
 | Monday, February 20     | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 2][twitch]               |
 
   </TabItem>
@@ -44,7 +45,7 @@ Past events:
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
 | Thursday, February 16  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 1][84]               |
-| Tuesday, February 7    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][83]                                                             |
+| Tuesday, February 7    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 1][83]                                                             |
 | Thursday, February 2   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 2)][82]                               |
 | Thursday, January 26   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 1)][81]                               |
 | Tuesday, January 24    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][80]                                                             |
