add friday and tuesday streams for savannah

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,6 +26,8 @@ Check out our upcoming events:
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Friday, February 17     | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 2][twitch]               |
 | Monday, February 20     | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 2][twitch]               |
+| Tuesday, February 21     | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][twitch]               |
+
 
   </TabItem>
   <TabItem value="recurring">
