--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,10 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, February 17     | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 2][twitch]               |
-| Monday, February 20     | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 2][twitch]               |
-| Tuesday, February 21     | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][twitch]               |
-
+| Tuesday, February 21    | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][twitch]                                                |
 
   </TabItem>
   <TabItem value="recurring">
@@ -46,8 +43,10 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Monday, February 20     | 2:00 PM UTC | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 2][86]                    |
+| Friday, February 17     | 5:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 2][85]                                                |
 | Thursday, February 16  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Plane Spotting with Redis and Node.js Episode 1][84]               |
-| Tuesday, February 7    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 1][83]                                                             |
+| Tuesday, February 7    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 1][83]                                                |
 | Thursday, February 2   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 2)][82]                               |
 | Thursday, January 26   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: More Redis Streams! (Episode 1)][81]                               |
 | Tuesday, January 24    | 2:00 PM ET   | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][80]                                                             |
@@ -181,6 +180,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[86]: https://www.youtube.com/watch?v=Qu-_wvSJrdE
+[85]: https://www.youtube.com/watch?v=3KOl7IdPtFw
 [84]: https://www.youtube.com/watch?v=TCTej1uihG4
 [83]: https://www.youtube.com/watch?v=8YwgWZuC5kc
 [82]: https://www.youtube.com/watch?v=qzFUZ7aBCEo
