Added IoT show episode 3.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,6 +25,7 @@ Check out our upcoming events:
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Tuesday, February 21    | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][twitch]                                                |
+| Friday, February 24     | 12:00 PM UTC | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 3][twitch]                    |
 
   </TabItem>
   <TabItem value="recurring">
