--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, February 24     | 12:00 PM UTC | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 3][twitch]                    |
+| Thursday, March 2       | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 4][twitch]                    |
 
   </TabItem>
   <TabItem value="recurring">
@@ -43,6 +43,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, February 24    | 12:00 PM UTC | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 3][88]                    |
 | Tuesday, February 21   | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][87]                                                |
 | Monday, February 20    | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 2][86]                    |
 | Friday, February 17    | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 2][85]                                                |
@@ -181,6 +182,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[88]: https://www.youtube.com/watch?v=IEx2WgWdhIA
 [87]: https://www.youtube.com/watch?v=zWJ2mQOXlq8
 [86]: https://www.youtube.com/watch?v=Qu-_wvSJrdE
 [85]: https://www.youtube.com/watch?v=3KOl7IdPtFw
